buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'eclipse'

version = '0.2r'
group = 'net.mcalec.mcalecs_changed_addon'
archivesBaseName = 'mcalecs_changed_addon'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.18.2'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
			args '--username', 'McAlec1'
            jvmArgs = [
                    "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
                    "--add-opens=java.base/java.util.jar=ALL-UNNAMED"
            ]

         }
   	}
}

mixin {
    env {
        remapRefMap = true
    }
}

repositories {
	// Mod Location
    flatDir {
        dirs 'libs'
    }

    maven {
		// CurseForge maven
		name = "CurseForge Maven"
        url = "https://cursemaven.com"
    }

    maven {
		// Changed Mod repo
        name = "Changed"
        url = "https://raw.githubusercontent.com/LtxProgrammer/Changed-Minecraft-Mod/master/mcmodsrepo/"
    }

  	maven {
		// Modrinth maven
		name = "Modrinth Maven"
        url = "https://api.modrinth.com/maven"
    }

    maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }

    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.2.14' // Forge
    implementation fg.deobf("net.ltxprogrammer.changed:Changed-m1.18.2-f40.2.0:v0.12.1") // Changed Mod
	implementation fg.deobf("curse.maven:changed-addon-plus-711303:4903584") // Changed Addon Plus Mod
	implementation fg.deobf("curse.maven:jei-238222:4593548") // Just Enough Items (JEI) Mod
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

repositories {
    // Other repositories can go above or below Modrinth's. We don't need priority :)
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        forRepositories(fg.repository) // Only add this if you're using ForgeGradle, otherwise remove this line
        filter {
            includeGroup "maven.modrinth"
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.2.14'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

apply from: 'mcreator.gradle'
